ESP is now station. Updated android app.

--- a/serverapp/.vscode/launch.json
+++ b/serverapp/.vscode/launch.json
@@ -21,6 +21,7 @@
         {
             "name": "PyHost Default Host",
             "type": "python",
+            "justMyCode":false,
             "request": "launch",
             "program": "pyHost.py",
             "console": "integratedTerminal",
