--- a/serverapp/config.ini
+++ b/serverapp/config.ini
@@ -10,7 +10,9 @@ max-speed = 1800
 min-speed = 1100
 speed-interval = 20
 orientation-enabled = 1
-pid-enabled = 1
-speed-enabled = 1
+pid-enabled = 0
+speed-enabled = 0
 log-interval = 50
-Acceleration-Weight = 0.01
+acceleration-weight = 0.01
+sensor-enabled = 1
+
