--- a/serverapp/config.ini
+++ b/serverapp/config.ini
@@ -1,18 +1,23 @@
 [DEFAULT]
-pid-factor = 0.0
-p-factor = 0.1
-i-factor = 0.01
-d-factor = 0.01
-pid-interval = 20
-landing-speed = 1200
-hover-speed = 1350
-max-speed = 1800
-min-speed = 1100
-speed-interval = 20
+pid-factor = 0.01
+p-angle-factor = 7.0
+i-angle-factor = 0.2
+d-angle-factor = 0.7
+p-rate-factor = 1.0
+i-rate-factor = 0.01
+d-rate-factor = 0.01
+pid-interval = 5
+landing-speed = 0.2
+hover-speed = 0.2
+max-speed = 0.8
+min-speed = 0.1
+max-ratio = 2.0
+speed-interval = 3
 orientation-enabled = 1
-pid-enabled = 0
-speed-enabled = 0
+pid-enabled = 1
+speed-enabled = 1
+altitude-enabled = 1
 log-interval = 50
-acceleration-weight = 0.01
+acceleration-weight = 0.003
 sensor-enabled = 1
 
