Cleaned up code. Implemented Kalman - komplementary switch. Finished altimeter implementation and filtering.

--- a/serverapp/config.ini
+++ b/serverapp/config.ini
@@ -6,12 +6,14 @@ d-angle-factor = 0.7
 p-rate-factor = 1.0
 i-rate-factor = 0.01
 d-rate-factor = 0.01
+p-velocity-factor = 1.0
+i-velocity-factor = 0.2
+d-velocity-factor = 0
 pid-interval = 5
-landing-speed = 0.2
-hover-speed = 0.2
 max-speed = 0.8
 min-speed = 0.1
-max-ratio = 2.0
+velocity-amp = 1
+velocity-limit = 0.1
 speed-interval = 3
 orientation-enabled = 1
 pid-enabled = 1
@@ -19,5 +21,12 @@ speed-enabled = 1
 altitude-enabled = 1
 log-interval = 50
 acceleration-weight = 0.003
+measurement-error-angle = 0.1
+measurement-error-angular-velocity = 0.001
+estimate-error-angle = 0.001
+estimate-error-angular-velocity = 0.1
+altitude-gain = -1.1547
+speed-gain = -0.6667
+use-kalman-orientation = 1
 sensor-enabled = 1
 
